--- a/info/task_short_description.html
+++ b/info/task_short_description.html
@@ -1,1 +1,3 @@
-Determinar se duas frases são anagramas, considerando apenas letras e ignorando espaços, vírgulas e pontos.
+Determinar se duas frases são anagramas, considerando apenas letras e ignorando espaços, vírgulas e pontos. [Manipulação de Strings; Lógica de Condições e Decisões]
+
+
