--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,5 +1,7 @@
 <!-- Describe task in general -->
-
+<p><strong>Retirado da OBI Nível Júnior de 2021</strong>    </p>
+<strong>Verificação de Aprendizagem:</strong> Avalie sua compreensão. Tente resolver sem consultar materiais, usando apenas seu conhecimento. Identifique áreas que precisam de revisão.
+<h4>Enunciado</h4>
 <p>
     Uma palavra ou frase é considerada um anagrama de outra se as letras de uma podem ser rearranjadas para formar a outra, desconsiderando espaços, vírgulas e pontos. Dadas duas frases, seu programa deve verificar se elas são anagramas uma da outra.
 </p>
@@ -35,3 +37,7 @@ anagrama(2, " a", "aa") >> 'N'
 </pre>
 {% endif %}
 </div>
+<h4>Habilidades</h4>
+<ul><li>Manipulação de Strings</li><li>Lógica de Condições e Decisões</li>
+
+</ul>
